Fix Checking For Updated Contents
Existing implementation didn't work because we were comparing
the contents of the same file, not different files.

Fixes: 410931191
Test: Added
Change-Id: I3a32c774651461dd5dca0f8133ed87f072692c13

GitOrigin-RevId: e474b42ce6a7a3dc50f0b53199bad616772c0d07