@@ -17,7 +17,6 @@ package com.android.tools.idea.apk.viewer;
 
 import static com.android.tools.idea.FileEditorUtil.DISABLE_GENERATED_FILE_NOTIFICATION_KEY;
 import static com.android.tools.idea.apk.viewer.pagealign.AlignmentFindingKt.IS_PAGE_ALIGN_ENABLED;
-import static com.android.tools.idea.apk.viewer.pagealign.AlignmentFindingKt.getAlignmentFinding;
 import static com.android.tools.instrumentation.threading.agent.callback.ThreadingCheckerUtil.withChecksDisabledForSupplier;
 
 import com.android.SdkConstants;
@@ -68,6 +67,8 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.List;
 import java.util.Optional;
 import javax.swing.JComponent;
@@ -81,6 +82,8 @@ import org.jetbrains.annotations.VisibleForTesting;
 public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkViewPanel.Listener {
   private final Project myProject;
   private final VirtualFile myBaseFile;
+  @NotNull
+  private String myBaseFileHash = "";
   private final VirtualFile myRoot;
   private final AndroidApplicationInfoProvider myApplicationInfoProvider;
   private ApkViewPanel myApkViewPanel;
@@ -129,12 +132,12 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
       @Override
       public void after(@NotNull List<? extends VFileEvent> events) {
         String basePath = myBaseFile.getPath();
-        String contents = safeReadContents(myBaseFile.toNioPath());
         for (VFileEvent event : events) {
           if (FileUtil.pathsEqual(basePath, event.getPath())) {
             if (myBaseFile.isValid()) { // If the file is deleted, the editor is automatically closed.
-              if (!contents.equals(safeReadContents(Path.of(event.getPath())))) {
-                refreshApk(baseFile);
+              String hash = generateHash(myBaseFile.toNioPath());
+              if (hash == null || !hash.equals(myBaseFileHash)) {
+                refreshApk(myBaseFile);
               }
             }
           }
@@ -146,12 +149,21 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
     mySplitter.setSecondComponent(new EmptyPanel().getComponent());
   }
 
-  private static String safeReadContents(Path path) {
+  @Nullable
+  private static String generateHash(Path path) {
     try {
-      return Files.readString(path);
+      MessageDigest digest = MessageDigest.getInstance("SHA-256");
+      byte[] bytes = Files.readAllBytes(path);
+      byte[] hashBytes = digest.digest(bytes);
+      StringBuilder hashString = new StringBuilder();
+      for (byte b : hashBytes) {
+        // Append each byte as a two-character hexadecimal string.
+        hashString.append(String.format("%02x", b));
+      }
+      return hashString.toString();
     }
-    catch (IOException e) {
-      return "";
+    catch (NoSuchAlgorithmException | IOException e) {
+      return null;
     }
   }
 
@@ -181,6 +193,10 @@ public class ApkEditor extends UserDataHolderBase implements FileEditor, ApkView
             mySplitter.setFirstComponent(myApkViewPanel.getContainer());
             selectionChanged(null);
           });
+          String hash = generateHash(apkVirtualFile.toNioPath());
+          if (hash != null) {
+            myBaseFileHash = hash;
+          }
         }
         catch (IOException e) {
           getLog().error(e);
